compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_entrypoints_empty.snap
---
source: tests/fixtures.rs
assertion_line: 127
expression: transcript
---
fixture: tests/fixtures/diagnostics/entrypoints/empty.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × expected exactly one top-level function
   ╭─[tests/fixtures/diagnostics/entrypoints/empty.ml:1:1]
 1 │ 
   · ┬
   · ╰── stage0 requires a single main function per file
   ╰────
  help: keep only: fn main() { dbg("hello world") }
